# learning-beam

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
data/: sample.txt  written_output.txt-00000-of-00001
python/: pyproject.toml
python/src/pipelines/: beam-intro.ipynb  common-transforms.ipynb  core-transforms.ipynb  csv_collections.py  pipeline_options.py  wordcount.py
scala/: .gitignore  build.sbt
scala/project/: plugins.sbt
scala/src/main/scala/learning/beam/: BeamIntro.scala  Plant.scala
src/pipelines/: beam-intro.ipynb  memory_pcollection.py  txt_collection.py
tests/: test_pipeline.py
